# pallor-hb

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements.txt
data/: README.md
hardware/: README.md
src/pallor_hb/: __init__.py  dataset.py  evaluate.py  features.py  model.py  train.py
tests/: test_pipeline.py
